# gundamOscAnaTools

./: README.md
macros/: README.md  drawSplines.cxx  fileConvertor_ATM.cpp  nnhome_slurm.sh  prepareGundamMCTree.C  prepareGundamMCTree.cpp  prepareGundamMCTree_MaCh3Input.cpp  run_jobs.sh  submit_slurm_FHC.sh  submit_slurm_RHC.sh  submit_slurm_atm_fin.sh
resources/TabulateNuOscillator/: CMakeLists.txt  README.md  TabulatedNuOscillator.cc  TabulatedNuOscillator.hh  compile.sh  dumpAtmOscProb.cc  dumpLblOscProb.cc  exampleEnergyBinning.py  exampleHeightBinning.py  exampleZenithBinning.py  testAtmNuOscillator.cc  testLinearNuOscillator.cc  testTabulatedNuOscillator.cc
resources/TabulateNuOscillator/Configs/: GUNDAM_CUDAProb3  GUNDAM_NuFASTLinear  GUNDAM_OscProb.yaml
resources/TabulateProb3PlusPlus/: README.md  TabulatedProb3PlusPlus.cc  testTabulatedProb3PlusPlus.cc
